syntax = "proto3";

option java_package = "org.oliverlittle.clusterprocess";

message CassandraDataSource {
    string server_url = 1;
    string keyspace = 2;
    string table = 3;
}

message CassandraTokenRange {
    sint64 start = 1;
    sint64 end = 2;
}